<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Openingsuren BE</string>
    <string name="action_settings" translatable="false">Instellingen</string>
    <string name="what" translatable="false">Winkel</string>
    <string name="where" translatable="false">Gemeente / Postcode</string>
    <string name="search" translatable="false">Zoeken</string>
    <string name="open" translatable="false">Open</string>
    <string name="closed" translatable="false">Gesloten</string>
    <string name="loading" translatable="false">Laden…</string>
    <string name="retrieving_results" translatable="false">Winkels aan het zoeken…</string>
    <string name="retrieving_details" translatable="false">Winkelgegevens aan het ophalen…</string>
    <string name="x_results_found" translatable="false">%1$d winkels gevonden.</string>
    <string name="x_results_found_showing_first_ten" translatable="false">%1$d winkels gevonden. Enkel de eerste 10 worden getoond.</string>
    <string name="more_then_300_results_found_showing_first_ten" translatable="false">Meer dan 300 winkels gevonden. Enkel de eerste 10 worden getoond.</string>
    <string name="too_many_results" translatable="false">Te veel winkels gevonden. Verfijn je zoekopdracht.</string>
    <string name="no_results_found" translatable="false">Geen winkels gevonden. Verfijn je zoekopdracht.</string>
    <string name="unexpected_error" translatable="false">Een onverwachte fout is opgetreden.</string>
    <string name="opening_hours" translatable="false">Openingsuren</string>
    <string name="tel_prefix" translatable="false">T: %1$s</string>
    <string name="fax_prefix" translatable="false">F: %1$s</string>
    
    <string name="monday" translatable="false">Maandag</string>
    <string name="tuesday" translatable="false">Dinsdag</string>
    <string name="wednesday" translatable="false">Woensdag</string>
    <string name="thursday" translatable="false">Donderdag</string>
    <string name="friday" translatable="false">Vrijdag</string>
    <string name="saturday" translatable="false">Zaterdag</string>
    <string name="sunday" translatable="false">Zondag</string>
    <string name="holiday" translatable="false">Feestdagen</string>

</resources>
