<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/message"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/name"
        style="@style/listTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/category"
        style="@style/listDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/street"
        style="@style/listDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/city"
        style="@style/listDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/phone"
        style="@style/listDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/fax"
        style="@style/listDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/listSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opening_hours" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/monday" />

        <TextView
            android:id="@+id/monday_am"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />

        <TextView
            android:id="@+id/monday_pm"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/tuesday" />

        <TextView
            android:id="@+id/tuesday_am"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />

        <TextView
            android:id="@+id/tuesday_pm"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/wednesday" />

        <TextView
            android:id="@+id/wednesday_am"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />

        <TextView
            android:id="@+id/wednesday_pm"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/thursday" />

        <TextView
            android:id="@+id/thursday_am"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />

        <TextView
            android:id="@+id/thursday_pm"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/friday" />

        <TextView
            android:id="@+id/friday_am"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />

        <TextView
            android:id="@+id/friday_pm"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/saturday" />

        <TextView
            android:id="@+id/saturday_am"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />

        <TextView
            android:id="@+id/saturday_pm"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/sunday" />

        <TextView
            android:id="@+id/sunday_am"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />

        <TextView
            android:id="@+id/sunday_pm"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/tableHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/holiday" />

        <TextView
            android:id="@+id/holiday_am"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />

        <TextView
            android:id="@+id/holiday_pm"
            style="@style/listDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.325" />
    </LinearLayout>

</LinearLayout>